fixing gallery gap

--- a/blocks/button.css
+++ b/blocks/button.css
@@ -13,4 +13,17 @@
     background: linear-gradient(90deg, #0278FE 0%, #003A7B 99.98%);
     border-style: none;
     box-shadow: 5px 5px 10px 0px #00000040;
+    padding: 0;
+    }
+
+    @media screen and (max-width: 1024px){
+        .button{
+            width: 355px;
+        }
+    }
+
+    @media screen and (max-width: 544px){
+        .button{
+            width: 288px;
+        }
     }
