--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -16,14 +16,13 @@
     .gallery{
         margin-top: 64px;
      display: grid;
-     grid-template-columns: repeat(2, 1fr);
-     grid-template-rows: repeat(4,1fr);
+     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
      
     }
 
     .gallery__image{
-        width: 352px;
-        height: 264px;
+        width: 100%;
+        height: 100%;
     }
  }
 
