--- a/blocks/place.css
+++ b/blocks/place.css
@@ -9,6 +9,8 @@
     gap: 48px 40px;
     margin-top: 80px;
     width: 720px;
+    margin: 0;
+    padding: 0;
 }
 
 .place__title{
